--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     theme: jekyll-theme-minimal
+
     <title>✍God's plan</title>
-</head>
+    </head>
 <body>
    
     
